
SMTv3.3 Release Notes
_____________________
	API Additions:
		-getZone(String[,Class<T extends Zone>]) this takes a string and returns a Zone, optionally a class such as Zone.class can be given as a second parameter, in which case an attempt to cast it to this class will be made. This should allow the use of less globally defined Zones
		-many built-in Zones have more protected variables and protected methods to make it easier to re-implement their draw method
		-KeyboardZone now has an alpha that can be set in constructors
		
	Bug Fixes:
		-KeyboardZone's keys now resize properly with the KeyboardZone when setSize(int,int) is called, fontSize changes also
		
	Feature Changes:
		-KeyboardZone now has a 10% size border to make it easier to move (5% zone size on each side)
		-KeyboardZone's letters now switch between lower and upper case depending on if shift is pressed
		
	-Added many examples, in a clear hierarchy similar to Processing's

SMTv3.2 Release Notes
_____________________

	API Changes:
		-Zone.getTouches() and TouchClient.getTouchesFromZone(Zone) return an array now instead of a collection, the old forms are now called Zone.getTouchCollection() and TouchClient.getTouchCollectionFromZone(Zone)
		-TextZone constructor has a selectable boolean, to specify whether highlighting is done, in addition to blur
		-Touch.getLastPoint() now returns a Point instead of a TuioPoint
		-TouchClient.getTouches() now returns an array, the old form is available using TouchClient.getTouchCollection()
		-Zone.activeTouches now private instead of public
		-Touch no longer has getScreenX() and getScreenY(), they do not work(aren't updated properly), and Touch.x and Touch.y already give screen relative co-ordinates
		-TouchClient no longer has constructors, use TouchClient.init() instead
		-TouchClient.setDrawTouchPoints() now takes an enum TouchDraw instead of a boolean, options are NONE, DEBUG, and SMOOTH