@@ -53,7 +53,23 @@ public final class SMTUtilities {
 		try {
 			return parent.getClass().getMethod(methodName, parameterTypes);
 		}
-		catch (NoSuchMethodException e) {}
+		catch (NoSuchMethodException e) {
+			Method m = null;
+			for(Class<?> c : TouchClient.extraClasses){
+				try {
+					m=c.getMethod(methodName, parameterTypes);
+				}
+				catch (NoSuchMethodException e1) {
+					continue;
+				}
+				catch (SecurityException e1) {
+					continue;
+				}
+				if(m != null){
+					return m;
+				}
+			}
+		}
 		catch (SecurityException e) {}
 		return null;
 	}
